# PicoRTOS-Sample

./: .gitmodules  BareMetal.code-workspace  FreeRTOS.code-workspace  README.md  Windows_ShowEnvSettings.bat  ZephyrRTOS.code-workspace
BareMetal/: README.md  build.bat  build.sh
BareMetal/src/: CMakeLists.txt  main.cpp
BareMetal/src/blink/: CMakeLists.txt  blink.hpp
FreeRTOS/: README.md  build.bat  build.sh
FreeRTOS/src/: CMakeLists.txt  main.cpp
FreeRTOS/src/blink/: blink.cpp
FreeRTOS/src/freertos/: CMakeLists.txt  FreeRTOSConfig.h
ZephyrRTOS/: README.md  build.bat  build.sh
ZephyrRTOS/src/: CMakeLists.txt  main.cpp  prj.conf  rpi_pico.overlay
ZephyrRTOS/src/boards/raspberrypi/rpi_pico_custom/: Kconfig.defconfig  Kconfig.rpi_pico_custom  board.yml  rpi_pico_custom-common.dtsi  rpi_pico_custom.dts  rpi_pico_custom.yaml
